Colour coding or requests and notes done.

--- a/public/assets/css/backend.css
+++ b/public/assets/css/backend.css
@@ -17,12 +17,15 @@
     margin-bottom: auto;
     width: 100%;
     background-color: rgba(0,0,0,.03);
-
 }
 
 .card-header {
     cursor: pointer;
     background-color: #e9ecef;  
+}
+
+.status {
+    text-align: right;
 }
 
 .status-section .btn {
@@ -50,6 +53,39 @@
     margin-left: 5px;
 }
 
+.notes-list {
+    height: 250px;
+    overflow-y: scroll;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    background-color: white;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.notes-list ul {
+    padding-left: 0;
+    width: 100%;
+    list-style-type: none;
+}
+
+.notes-list li {
+    padding-left: 0;
+    list-style-type: none;
+}
+
 .input-group-text {
     min-width:80px;
+}
+
+.freight-section .input-group-text {
+    min-width:160px;
+}
+
+.refresh-notes-btn {
+    height: 78px;
+}
+
+#destinationAddress {
+    height: 93px;
 }
