--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,3 +1,7 @@
+<script type="text/javascript">
+let originNotes = [];
+const currentUser = '{{{currentUser}}}';
+</script>
 <div class="container-lg">
     <div class="row">
         <div class="col-12 text-center mt-3">
