--- a/views/newrequest.handlebars
+++ b/views/newrequest.handlebars
@@ -2,6 +2,7 @@
     <div class="row">
         <div class="col-12 text-center mt-3">
             <h1>New Request</h1>
+            Current used id: {{userId}}
         </div>
 
     </div>
