--- a/views/users.handlebars
+++ b/views/users.handlebars
@@ -31,24 +31,26 @@
         </div>
     </div>
 
-    <table class="table bg-white align-middle">
-        <thead>
-            <tr>
-                <th scope="col">User name</th>
-                <th scope="col">Email Address</th>
-                <th scope="col">Role</th>
-                <th scope="col">Status</th>
-                <th scope="col">Last Login</th>
-            </tr>
-        </thead>
-        <tbody id="usersTable" class="bg-white">
+    <div class="table-responsive">
+        <table class="table bg-white align-middle">
+            <thead>
+                <tr>
+                    <th scope="col">User name</th>
+                    <th scope="col">Email Address</th>
+                    <th scope="col">Role</th>
+                    <th scope="col">Status</th>
+                    <th scope="col">Last Login</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody id="usersTable" class="bg-white ">
 
-        </tbody>
-    </table>
-
+            </tbody>
+        </table>
+    </div>
     <nav aria-label="Page navigation" id="Paginate">
         <ul class="pagination">
-            
+
         </ul>
     </nav>
 </div>
