--- a/public/assets/css/backend.css
+++ b/public/assets/css/backend.css
@@ -6,7 +6,7 @@
 .centered {
     position: relative;
     top: 50%;
-    left: 50%;
+    left: calc(50% + 15px);
     transform: translate(-50%, -50%);
 }
 
