Fixed notes in new request. Added sorting for requests (Alert first, New second, Complete last). Status buttons now change based on status.

--- a/views/newrequest.handlebars
+++ b/views/newrequest.handlebars
@@ -1,3 +1,9 @@
+<script type="text/javascript">
+let currentUserId = '{{{currentUserId}}}';
+let currentUser = '{{{currentUser}}}';
+console.log(currentUserId + " " + currentUser);
+</script>
+
 <div class="container">
     <div class="row">
         <div class="col-12 text-center mt-3">
@@ -47,21 +53,24 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" id="inputGroup-sizing-sm">Customer:</span>
                                 </div>
-                                <input type="text" class="form-control" aria-describedby="inputGroup-sizing-sm" id="customerName">
+                                <input type="text" class="form-control" aria-describedby="inputGroup-sizing-sm"
+                                    id="customerName">
                             </div>
                             <!-- Contact -->
                             <div class="input-group input-group-sm mb-3">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" id="inputGroup-sizing-sm">Contact:</span>
                                 </div>
-                                <input type="text" class="form-control" aria-describedby="inputGroup-sizing-sm" id="customerContact">
+                                <input type="text" class="form-control" aria-describedby="inputGroup-sizing-sm"
+                                    id="customerContact">
                             </div>
                             <!-- Phone -->
                             <div class="input-group input-group-sm mb-3">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" id="inputGroup-sizing-sm">Phone:</span>
                                 </div>
-                                <input type="text" class="form-control" aria-describedby="inputGroup-sizing-sm" id="customerPhone">
+                                <input type="text" class="form-control" aria-describedby="inputGroup-sizing-sm"
+                                    id="customerPhone">
                             </div>
 
                         </div>
@@ -111,7 +120,7 @@
                             </div> --}}
                         </div>
                     </div>
-             
+
                     <div class="form-row" style="margin-top: 20px;">
                         <div class="form-group col-md-6">
                             <div class="form-check">
@@ -150,18 +159,18 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" id="inputGroup-sizing-sm">Freight Account #</span>
                                 </div>
-                                <input type="text" class="form-control" aria-describedby="inputGroup-sizing-sm" id="freightAccount">
+                                <input type="text" class="form-control" aria-describedby="inputGroup-sizing-sm"
+                                    id="freightAccount">
                             </div>
                         </div>
                     </div>
                     <div class="row" style="margin-top: 20px;">
                         <div class="col-6">
-                              <label for="notes">Parts:</label>
+                            <label for="notes">Parts:</label>
                             <textarea class="form-control" id="parts" rows="4"
                                 style="resize:none; background-color: white;"></textarea>
                         </div>
                         <div class="col-6">
-
                             <!-- Notes -->
                             <label for="notes">Notes:</label>
                             <textarea class="form-control" id="notes" rows="4"
@@ -178,5 +187,4 @@
             </div>
         </div>
     </div>
-</div>
 </div>
