--- a/views/partials/request-block.handlebars
+++ b/views/partials/request-block.handlebars
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-12">
-        <div class="card">
-            <div id="request-header" class="card-header" data-target="#collapse-{{this.id}}" data-status="{{this.status}}">
+        <div class="card request-block" data-status="{{this.status}}">
+            <div id="request-header" class="card-header request-header" data-target="#collapse-{{this.id}}">
                 <div class="row no-gutters">
                     <div class="col-1">
                         ID: <span class="bold">{{this.id}}</span>
@@ -54,7 +54,7 @@
                             <!-- Customer address -->
                             <label for="destinationAddress">Customer Address:</label>
                             <textarea class="form-control" id="destinationAddress" rows="3"
-                                style="resize:none; background-color: white;"
+                                style="resize:none; background-color: white; white-space: pre-line;"
                                 readonly>{{this.customerAddress}}</textarea>
                         </div>
                         <div class="col-4">
@@ -142,16 +142,19 @@
                                     <!-- Parts -->
                                     <label for="parts">Parts:</label>
                                     <textarea class="form-control" id="parts" rows="8"
-                                        style="resize:none; background-color: white;" readonly>{{this.parts}}</textarea>
+                                        style="resize:none; background-color: white; white-space: pre-line;"
+                                        readonly>{{this.parts}}</textarea>
                                 </div>
                                 <div class="col-4 status-section">
                                     <!-- Status -->
                                     Status:
                                     <ul>
-                                        <li><button class="btn btn-danger">Issue</button></li>
-                                        <li><button class="btn btn-light">Placeholder</button></li>
-                                        <li><button class="btn btn-light">Placeholder</button></li>
-                                        <li><button class="btn btn-success">Complete</button></li>
+                                        <li><button class="btn btn-danger alert-btn" data-target="{{this.id}}">Alert</button></li>
+                                        <li><button class="btn btn-danger resolved-btn" style="display:none;" data-target="{{this.id}}">Resolved</button></li>
+                                        <li><button class="btn btn-light edit-btn" data-target="{{this.id}}">Edit</button></li>
+                                        <li><button class="btn btn-success complete-btn" data-target="{{this.id}}">Complete</button></li>
+                                        <li><button class="btn btn-light incomplete-btn" style="display:none;" data-target="{{this.id}}">Incomplete</button></li>
+                                        <li><button class="btn btn-warning archive-btn" style="display:none;" data-target="{{this.id}}">Archive</button></li>
                                     </ul>
                                 </div>
                             </div>
