--- a/views/partials/request-block.handlebars
+++ b/views/partials/request-block.handlebars
@@ -3,16 +3,16 @@
         <div class="card request-block" data-status="{{this.status}}">
             <div id="request-header" class="card-header request-header" data-target="#collapse-{{this.id}}">
                 <div class="row no-gutters">
-                    <div class="col-1">
+                    <div class="col-6 col-lg-1">
                         ID: <span class="bold">{{this.id}}</span>
                     </div>
-                    <div class="col-3">
+                    <div class="col-6 col-lg-3 text-md-right text-lg-left">
                         Requested on: <span class="req-on bold">{{this.reqOn}}</span>
                     </div>
                     <div class="col-6">
                         Freight method: <span class="bold">{{this.freightMethod}}</span>
                     </div>
-                    <div class="col-2 status">
+                    <div class="col-6 col-lg-2 status">
                         Status: <span class="bold">{{this.status}}</span>
                     </div>
                 </div>
@@ -21,7 +21,7 @@
             <div id="collapse-{{this.id}}" class="collapse">
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-12 col-lg-4">
                             <!-- Customer -->
                             <div class="input-group input-group-sm mb-3">
                                 <div class="input-group-prepend">
@@ -50,14 +50,14 @@
                                     aria-describedby="inputGroup-sizing-sm" readonly>
                             </div>
                         </div>
-                        <div class="col-4">
+                        <div class="col-12 col-md-6 col-lg-4 pb-3 pb-md-0">
                             <!-- Customer address -->
                             <label for="destinationAddress">Customer Address:</label>
                             <textarea class="form-control" id="destinationAddress" rows="3"
                                 style="resize:none; background-color: white; white-space: pre-line;"
                                 readonly>{{this.customerAddress}}</textarea>
                         </div>
-                        <div class="col-4">
+                        <div class="col-12 col-md-6 col-lg-4">
                             <!-- IBT -->
                             <div class="input-group input-group-sm mb-3">
                                 <div class="input-group-prepend">
@@ -88,7 +88,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-6 notes-section">
+                        <div class="col-12 col-lg-6 notes-section pb-3 pb-lg-0">
                             <!-- Notes -->
                             <label for="notes-list">Notes:</label>
                             <div id="notes-list-{{this.id}}" class="notes-list">
@@ -102,14 +102,14 @@
                             </div>
                             <div class="input-group">
                                 <input class="form-control notes-input" id="add-note-{{this.id}}"
-                                    data-target="{{this.id}}" style="resize:none;"></input>
+                                    data-target="{{this.id}}" style="resize:none;" placeholder="Enter any additional notes here"></input>
                                 <span>
                                     <button class="btn btn-primary submit-note-btn"
                                         data-target="{{this.id}}">Submit</button>
                                 </span>
                             </div>
                         </div>
-                        <div class="col-6">
+                        <div class="col-12 col-lg-6">
                             <div class="row freight-section">
                                 {{!-- <div class="col-4">
                                     <button class="btn btn-light refresh-notes-btn">Refresh Notes</button>
