New requests now notify on dashboard

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,11 +1,19 @@
 <script type="text/javascript">
-let originNotes = [];
-const currentUser = '{{{currentUser}}}';
+    let originNotes = [];
+    const currentUser = '{{{currentUser}}}';
 </script>
 <div class="container-fluid dashboardImg">
     <div class="row centered">
         <div class="col-12 text-center mt-3">
             <div class="align-middle welcomeTitle">Welcome to TCWA</div>
+        </div>
+    </div>
+</div>
+
+{{!-- NEW REQUESTS ALERT CONTAINER --}}
+<div class="container-lg">
+    <div class="row">
+        <div class="col-12 text-right newrequestsalert">       
         </div>
     </div>
 </div>
