--- a/views/partials/request-block.handlebars
+++ b/views/partials/request-block.handlebars
@@ -6,7 +6,7 @@
                     <div class="col-6 col-lg-1">
                         ID: <span class="bold">{{this.id}}</span>
                     </div>
-                    <div class="col-6 col-lg-3 text-md-right text-lg-left">
+                    <div class="col-6 col-lg-3 text-right text-lg-left">
                         Requested on: <span class="req-on bold">{{this.reqOn}}</span>
                     </div>
                     <div class="col-6">
