--- a/views/layouts/users.handlebars
+++ b/views/layouts/users.handlebars
@@ -14,7 +14,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top topbar">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black topbar">
         <img src="./assets/img/tcwa-logo.png" style="width: 160px;" class='m-2'>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
