Status buttons now do stuff. Added archived requests page.

--- a/views/archive.handlebars
+++ b/views/archive.handlebars
@@ -5,7 +5,7 @@
 <div class="container-fluid dashboardImg">
     <div class="row centered">
         <div class="col-12 text-center mt-3">
-            <div class="align-middle welcomeTitle">Welcome to TCWA</div>
+            <div class="align-middle welcomeTitle">Archived Requests</div>
         </div>
     </div>
 </div>
@@ -20,7 +20,7 @@
     </div>
     <div class="row">
         <div class="col-12">
-            <a href="/archive">View archived requests</a>
+            <a href="/dashboard">Go back to dashboard</a>
         </div>
     </div>
 </div>
