--- a/views/partials/request-block.handlebars
+++ b/views/partials/request-block.handlebars
@@ -149,12 +149,12 @@
                                     <!-- Status -->
                                     Status:
                                     <ul>
-                                        <li><button class="btn btn-danger alert-btn" data-target="{{this.id}}">Alert</button></li>
-                                        <li><button class="btn btn-danger resolved-btn" style="display:none;" data-target="{{this.id}}">Resolved</button></li>
+                                        <li><button class="btn btn-danger alert-btn" data-target="{{this.id}}" data-id="1">Alert</button></li>
+                                        <li><button class="btn btn-danger resolved-btn" style="display:none;" data-target="{{this.id}}" data-id="2">Resolved</button></li>
                                         <li><button class="btn btn-light edit-btn" data-target="{{this.id}}">Edit</button></li>
-                                        <li><button class="btn btn-success complete-btn" data-target="{{this.id}}">Complete</button></li>
-                                        <li><button class="btn btn-light incomplete-btn" style="display:none;" data-target="{{this.id}}">Incomplete</button></li>
-                                        <li><button class="btn btn-warning archive-btn" style="display:none;" data-target="{{this.id}}">Archive</button></li>
+                                        <li><button class="btn btn-success complete-btn" data-target="{{this.id}}" data-id="3">Complete</button></li>
+                                        <li><button class="btn btn-light incomplete-btn" style="display:none;" data-target="{{this.id}}" data-id="2">Incomplete</button></li>
+                                        <li><button class="btn btn-warning archive-btn" style="display:none;" data-target="{{this.id}}" data-id="4">Archive</button></li>
                                     </ul>
                                 </div>
                             </div>
