--- a/public/assets/css/backend.css
+++ b/public/assets/css/backend.css
@@ -70,6 +70,10 @@ body {
     height: 100%;
 }
 
+.container-lg {
+    padding-bottom: 50px;
+}
+
 .card {
     margin-top: auto;
     margin-bottom: 10px;
