Cleaned up code.

--- a/views/partials/request-block.handlebars
+++ b/views/partials/request-block.handlebars
@@ -102,7 +102,8 @@
                             </div>
                             <div class="input-group">
                                 <input class="form-control notes-input" id="add-note-{{this.id}}"
-                                    data-target="{{this.id}}" style="resize:none;" placeholder="Enter any additional notes here"></input>
+                                    data-target="{{this.id}}" style="resize:none;"
+                                    placeholder="Enter any additional notes here"></input>
                                 <span>
                                     <button class="btn btn-primary submit-note-btn"
                                         data-target="{{this.id}}">Submit</button>
@@ -149,12 +150,18 @@
                                     <!-- Status -->
                                     Status:
                                     <ul>
-                                        <li><button class="btn btn-danger alert-btn" data-target="{{this.id}}" data-id="1">Alert</button></li>
-                                        <li><button class="btn btn-danger resolved-btn" style="display:none;" data-target="{{this.id}}" data-id="2">Resolved</button></li>
-                                        <li><button class="btn btn-light edit-btn" data-target="{{this.id}}">Edit</button></li>
-                                        <li><button class="btn btn-success complete-btn" data-target="{{this.id}}" data-id="3">Complete</button></li>
-                                        <li><button class="btn btn-light incomplete-btn" style="display:none;" data-target="{{this.id}}" data-id="2">Incomplete</button></li>
-                                        <li><button class="btn btn-warning archive-btn" style="display:none;" data-target="{{this.id}}" data-id="4">Archive</button></li>
+                                        <li><button class="btn btn-danger alert-btn" data-target="{{this.id}}"
+                                                data-id="1">Alert</button></li>
+                                        <li><button class="btn btn-danger resolved-btn" style="display:none;"
+                                                data-target="{{this.id}}" data-id="2">Resolved</button></li>
+                                        <li><button class="btn btn-light edit-btn"
+                                                data-target="{{this.id}}">Edit</button></li>
+                                        <li><button class="btn btn-success complete-btn" data-target="{{this.id}}"
+                                                data-id="3">Complete</button></li>
+                                        <li><button class="btn btn-light incomplete-btn" style="display:none;"
+                                                data-target="{{this.id}}" data-id="2">Incomplete</button></li>
+                                        <li><button class="btn btn-warning archive-btn" style="display:none;"
+                                                data-target="{{this.id}}" data-id="4">Archive</button></li>
                                     </ul>
                                 </div>
                             </div>
