--- a/views/layouts/users.handlebars
+++ b/views/layouts/users.handlebars
@@ -29,6 +29,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="newrequest">New Request</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="archive">Archived Requests</a>
+                </li>
                 {{#if admin}}
                 <li class="nav-item active">
                     <a class="nav-link" href="users">Users <span class="sr-only">(current)</a>
