--- a/views/layouts/archive.handlebars
+++ b/views/layouts/archive.handlebars
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Truck Centre WA: Direct-Ship</title>
+    <title>Truck Center WA: Direct-Ship</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel='stylesheet' href='/assets/css/request.css' type='text/css' />
+    <link rel='stylesheet' href='/assets/css/backend.css' type='text/css' />
 </head>
 
 <body>
@@ -23,12 +23,12 @@
         <div class="collapse navbar-collapse text-right" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="dashboard">Home </a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="newrequest">New Request <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="dashboard">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="newrequest">New Request</a>
+                </li>
+                <li class="nav-item active">
                     <a class="nav-link" href="archive">Archived Requests</a>
                 </li>
                 {{#if admin}}
@@ -55,8 +55,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-    <script src="assets/js/freight.js"></script>
-   
+    <script src="/assets/js/backend.js"></script>
 </body>
 
 </html>
