--- a/views/layouts/backend.handlebars
+++ b/views/layouts/backend.handlebars
@@ -28,6 +28,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="newrequest">New Request</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="archive">Archived Requests</a>
+                </li>
                 {{#if admin}}
                 <li class="nav-item">
                     <a class="nav-link" href="users">Users</a>
